...

		enum Antigen {
			static let proofDesc = "AppStrings.ExposureSubmissionResult.Antigen.proofDesc"
		}

		enum RemoveAlert {
			static let deleteButton = "AppStrings.ExposureSubmissionResult.removeAlert_ConfirmButtonTitle"
		}
	}
	
	enum ExposureSubmissionPositiveTestResult {
		static let noConsentTitle = "TestResultPositive_NoConsent_Title"
		static let noConsentInfo1 = "TestResultPositive_NoConsent_Info1"
...
		static let optionNo = "AppStrings.ExposureSubmissionWarnEuropeTravelConfirmation.optionNo"
		static let optionNone = "AppStrings.ExposureSubmissionWarnEuropeTravelConfirmation.optionNone"
	}

	enum LocalStatistics {
		static let title = "AppStrings.Statistics.Card.Incidence.title"
		static let infoButton = "AppStrings.Statistics.Card.Incidence.infoButton"
		static let selectState = "AppStrings.LocalStatistics.selectState"
		static let selectDistrict = "AppStrings.LocalStatistics.selectDistrict"
		static let manageStatisticsCard = "AppStrings.LocalStatistics.manageStatisticsCard"
		static let localStatisticsCard = "AppStrings.LocalStatistics.localStatisticsCard"
		static let localStatisticsCardTitle = "AppStrings.LocalStatistics.localStatisticsCardTitle"
		static let localStatisticsCardSubtitle = "AppStrings.LocalStatistics.localStatisticsCardSubtitle"
		static let localStatisticsCardPrimaryValue = "AppStrings.LocalStatistics.localStatisticsCardPrimaryValue"
		static let localStatisticsCardSecondaryValue = "AppStrings.LocalStatistics.localStatisticsCardSecondaryValue"
...
			static let cancel = "AppStrings.Reset.confirmDialogCancel"
		}

	}
	
	enum AccessibilityLabel {
		static let close = "AppStrings.AccessibilityLabel.close"
	}
	
	enum InviteFriends {
		static let imageAccessLabel = "AppStrings.InviteFriends.imageAccessLabel"
	}
	
...
			static let subtitle = "AppStrings.Statistics.Card.Combined7DayIncidence.subtitle"
			static let primaryValueTitle = "AppStrings.Statistics.Card.Combined7DayIncidence.primaryValueTitle"
			static let secondaryValueTitle = "AppStrings.Statistics.Card.Combined7DayIncidence.secondaryValueTitle"
			static let infoButton = "AppStrings.Statistics.Card.Combined7DayIncidence.infoButton"
		}
		enum General {
			static let tableViewCell = "HomeStatisticsTableViewCell"
			static let card = "HomeStatisticsCard"
		}
	}
	
	enum UpdateOSScreen {
		static let mainImage = "UpdateOSScreen.mainImage"
...
